tinyc/test/bad/ptr-to-void-add.c
int main()
{
    void *p;
    p + 3;
    return 0;
}
